; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_t1_enc.c_tls1_final_finish_mac.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_t1_enc.c_tls1_final_finish_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32, i32 }

@EVP_MAX_MD_SIZE = common dso_local global i32 0, align 4
@TLS1_FINISH_MAC_LENGTH = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @tls1_final_finish_mac(%struct.TYPE_8__* %0, i8* %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %14 = load i32, i32* @EVP_MAX_MD_SIZE, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %11, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %12, align 8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %19 = call i32 @ssl3_digest_cached_records(%struct.TYPE_8__* %18, i32 0)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  store i32 1, i32* %13, align 4
  br label %52

22:                                               ; preds = %4
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %24 = trunc i64 %15 to i32
  %25 = call i32 @ssl_handshake_hash(%struct.TYPE_8__* %23, i8* %17, i32 %24, i64* %10)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %22
  store i64 0, i64* %5, align 8
  store i32 1, i32* %13, align 4
  br label %52

28:                                               ; preds = %22
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = load i64, i64* %8, align 8
  %32 = load i64, i64* %10, align 8
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 0
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load i8*, i8** %9, align 8
  %44 = load i64, i64* @TLS1_FINISH_MAC_LENGTH, align 8
  %45 = call i32 @tls1_PRF(%struct.TYPE_8__* %29, i8* %30, i64 %31, i8* %17, i64 %32, i32* null, i32 0, i32* null, i32 0, i32* null, i32 0, i32 %37, i32 %42, i8* %43, i64 %44, i32 1)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %48, label %47

47:                                               ; preds = %28
  store i64 0, i64* %5, align 8
  store i32 1, i32* %13, align 4
  br label %52

48:                                               ; preds = %28
  %49 = load i64, i64* %10, align 8
  %50 = call i32 @OPENSSL_cleanse(i8* %17, i64 %49)
  %51 = load i64, i64* @TLS1_FINISH_MAC_LENGTH, align 8
  store i64 %51, i64* %5, align 8
  store i32 1, i32* %13, align 4
  br label %52

52:                                               ; preds = %48, %47, %27, %21
  %53 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %53)
  %54 = load i64, i64* %5, align 8
  ret i64 %54
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ssl3_digest_cached_records(%struct.TYPE_8__*, i32) #2

declare dso_local i32 @ssl_handshake_hash(%struct.TYPE_8__*, i8*, i32, i64*) #2

declare dso_local i32 @tls1_PRF(%struct.TYPE_8__*, i8*, i64, i8*, i64, i32*, i32, i32*, i32, i32*, i32, i32, i32, i8*, i64, i32) #2

declare dso_local i32 @OPENSSL_cleanse(i8*, i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
